fixed spacing issue

--- a/client/src/components/navbar/ProfileSection.css
+++ b/client/src/components/navbar/ProfileSection.css
@@ -9,7 +9,7 @@
   box-shadow: 0 0px 15px rgba(0, 0, 0, 0.32);
   position: fixed;
   top: 85px;
-  right: 64px;
+  right: 76px;
   transform: translateY(-7px);
   z-index: 4;
   opacity: 0;
